--- a/DockerfileCustomEntryPoint
+++ b/DockerfileCustomEntryPoint
@@ -1,8 +1,8 @@
 FROM igeolise/ubuntu:18.04
 
-ENV GRAALVM_LINK https://github.com/oracle/graal/releases/download/vm-1.0.0-rc6/graalvm-ce-1.0.0-rc6-linux-amd64.tar.gz
+ENV GRAALVM_LINK https://github.com/oracle/graal/releases/download/vm-1.0.0-rc7/graalvm-ce-1.0.0-rc7-linux-amd64.tar.gz
 
-RUN curl -o /tmp/graalvm.tar.gz -LS https://github.com/oracle/graal/releases/download/vm-1.0.0-rc6/graalvm-ce-1.0.0-rc6-linux-amd64.tar.gz && \
+RUN curl -o /tmp/graalvm.tar.gz -LS ${GRAALVM_LINK} && \
     tar -xf /tmp/graalvm.tar.gz -C /opt && \
     rm /tmp/graalvm.tar.gz && \
     mv /opt/* /opt/graalvm
