--- a/DockerfileRegular
+++ b/DockerfileRegular
@@ -1,13 +1,13 @@
 FROM ubuntu:18.04
 
-ENV GRAALVM_LINK https://github.com/oracle/graal/releases/download/vm-1.0.0-rc6/graalvm-ce-1.0.0-rc6-linux-amd64.tar.gz
+ENV GRAALVM_LINK https://github.com/oracle/graal/releases/download/vm-1.0.0-rc7/graalvm-ce-1.0.0-rc7-linux-amd64.tar.gz
 RUN apt-get update && \
     apt-get install -y --no-install-recommends curl ca-certificates && \
     apt-get dist-upgrade -y && \
     apt-get autoremove -y && \
     rm -rf /var/lib/apt/lists/*
 
-RUN curl -o /tmp/graalvm.tar.gz -LS https://github.com/oracle/graal/releases/download/vm-1.0.0-rc6/graalvm-ce-1.0.0-rc6-linux-amd64.tar.gz && \
+RUN curl -o /tmp/graalvm.tar.gz -LS ${GRAALVM_LINK} && \
     tar -xf /tmp/graalvm.tar.gz -C /opt && \
     rm /tmp/graalvm.tar.gz && \
     mv /opt/* /opt/graalvm
